# ImageBrowser

./: .gitignore  CMakeLists.txt  ImageBrowser.pro  README.md  imagebrowserbackend.cpp  imagebrowserbackend.h  main.cpp  main.qml  pack.bat  qml.qrc
.github/workflows/: ci.yml
aesthetics/: assistant_knowledge.md  assistant_server.py  config.json.example  eat_server.py  qsit_server.py  requirements-qsit.txt  requirements.txt
aesthetics/weights/: README.md
docs/: aesthetics.md  coverage.md  development-log.md  qmake-to-cmake-migration.md  testing-report.md  testing-testcases.md  testing.md
installer/: ImageBrowser.iss
qml/: main.qml
qml/components/: AssistantFab.qml  AssistantPanel.qml  BackgroundGradient.qml  BottomToolbar.qml  CritiquePanel.qml  EmptyPlaceholder.qml  ImageViewer.qml  RecentFolderPopup.qml  ToastMessage.qml  TopToolbar.qml
scripts/: build_release.bat  generate_test_report.bat  generate_test_report.ps1  package.bat  run_coverage.bat  run_tests.bat  setup_aesthetics.bat  test_report_template.html
src/: main.cpp
src/backend/: AestheticEvaluator.cpp  AestheticEvaluator.h  AssistantEvaluator.cpp  AssistantEvaluator.h  CritiqueEvaluator.cpp  CritiqueEvaluator.h  ImageBrowserBackend.cpp  ImageBrowserBackend.h
tests/: CMakeLists.txt  TestFixture.h  tst_imagebrowserbackend.cpp  tst_keyboard_integration.cpp  tst_qml.cpp
tests/qml/: KeyboardHarness.qml  MockBackend.qml  tst_backgroundgradient.qml  tst_bottomtoolbar.qml  tst_emptyplaceholder.qml  tst_imageviewer.qml  tst_recentfolderpopup.qml  tst_toastmessage.qml  tst_toptoolbar.qml
